--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "git web example",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Rey Bentley",
   "license": "ISC",
+  "homepage": "https://reybentley.github.io/ghwebsites",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
