--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Rey Bentley",
   "license": "ISC",
-  "homepage": "https://reybentley.github.io/ghwebsites",
+  "homepage": "https://reybentley.github.io/myghfirstexample",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
